# apt-changelog-viewer

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: apt-changelog-viewer.install  changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: apt-changelog-viewer.pot  sv.po
po/locale/sv/LC_MESSAGES/: apt-changelog-viewer.mo
src/apt_changelog_viewer/: main.py
