[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apt-changelog-viewer"
version = "0.1.0"
description = "GTK4 changelog viewer for installed packages with security alerts"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
apt-changelog-viewer = "apt_changelog_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
